--- a/app/templates/incidentsModal.html
+++ b/app/templates/incidentsModal.html
@@ -1,4 +1,5 @@
 <table class="table table-bordered table-striped platform-spacing">
+  <h3 class="incidents-heading">Incidents</h3>
   <thead>
     <tr>
       <th ng-click="incidentsModal.sortData('subject'); selected ='subject'">
