--- a/app/templates/closedTickets.html
+++ b/app/templates/closedTickets.html
@@ -24,10 +24,12 @@
   <tbody>
     <tr ng-repeat="ticket in closedTickets.ZenFactory.closedTickets.ticket">
       <td>
-        <a ui-sref="ticket" ng-click="closedTickets.passTicketInfo(ticket.id, ticket.subject)" class="ticket-title">
+        <div class="incident-btn-align">
+          <a ui-sref="ticket" ng-click="closedTickets.passTicketInfo(ticket.id, ticket.subject)" class="ticket-title">
             {{ ticket.subject }}
           </a>
-          <button ng-show="ticket.hasIncident == true" button type="button" class="btn btn-warning btn-incident" ng-controller="IncidentsModalCtrl as incidentsModal" ng-click="incidentsModal.openModal(ticket.id, closedTickets.ZenFactory.closedTickets);">This ticket has incidents</button>
+          <button ng-show="ticket.hasIncident == true" button type="button" class="btn btn-warning incident-btn" ng-controller="IncidentsModalCtrl as incidentsModal" ng-click="incidentsModal.openModal(ticket.id, closedTickets.ZenFactory.closedTickets);">This ticket has incidents</button>
+        </div>
       </td>
       <td>
         {{ ticket.username }}
