--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -55,10 +55,13 @@
   <tbody>
     <tr ng-repeat="ticket in home.ZenFactory.unsolvedTickets.ticket">
       <td>
+        <div class="incident-btn-align">
         <a ui-sref="ticket" ng-click="home.passTicketInfo(ticket.id, ticket.subject)" class="ticket-title">
             {{ ticket.subject }}
           </a>
-          <button ng-show="ticket.hasIncident == true" button type="button" class="btn btn-warning btn-incident" ng-controller="IncidentsModalCtrl as incidentsModal" ng-click="incidentsModal.openModal(ticket.id, home.ZenFactory.unsolvedTickets);">This ticket has incidents</button>
+          <button ng-show="ticket.hasIncident == true" button type="button" class="btn btn-warning incident-btn" ng-controller="IncidentsModalCtrl as incidentsModal" ng-click="incidentsModal.openModal(ticket.id, home.ZenFactory.unsolvedTickets);">This ticket has incidents</button>
+        </div>
+
       </td>
       <td>
         {{ ticket.username }}
