add triage note to new tickets view

--- a/app/templates/newTicket.html
+++ b/app/templates/newTicket.html
@@ -10,3 +10,6 @@
   </div>
   <button type="submit" class="btn btn-primary" ng-click="newTicket.createTicket()">Submit</button>
 </form>
+<div class="alert alert-success" style="margin-top: 10px;">
+  Your ticket will appear in All Unsolved Tickets after it has been picked up and triaged by Support.
+</div>
