add incident button to my tickets view, add X button to incidents modal

--- a/app/templates/incidentsModal.html
+++ b/app/templates/incidentsModal.html
@@ -1,4 +1,7 @@
 <table class="table table-bordered table-striped platform-spacing">
+  <div class="close-modal" ng-click="incidentsModal.closeModal()">
+    X
+  </div>
   <h3 class="incidents-heading">Incidents</h3>
   <thead>
     <tr>
