--- a/app/templates/myTicket.html
+++ b/app/templates/myTicket.html
@@ -27,7 +27,7 @@
         <a ui-sref="ticket" ng-click="myTickets.passTicketInfo(ticket.id, ticket.subject)" class="ticket-title">
             {{ ticket.subject }}
           </a>
-          <button ng-show="ticket.type == 'incident'" button type="button" class="btn btn-warning incident-btn" ng-controller="IncidentsModalCtrl as incidentsModal" ng-click="incidentsModal.openModal(ticket.id, myTickets.ZenFactory.myTicketData);">This ticket has incidents</button>
+          <button ng-show="ticket.type == 'incident'" button type="button" class="btn btn-warning incident-btn" ng-controller="MyTicketsModalCtrl as myTicketsModal" ng-click="myTicketsModal.openModal(ticket.problem_id, myTickets.ZenFactory.myTicketData);">This ticket has a linked problem</button>
       </td>
       <td>
         {{ ticket.created_at | date:'mediumDate' }}
