refactor incidents modal to work across all views

--- a/app/templates/closedTickets.html
+++ b/app/templates/closedTickets.html
@@ -22,13 +22,13 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="ticket in closedTickets.ZenFactory.closedTickets.ticket">
+    <tr ng-repeat="ticket in closedTickets.ZenFactory.closedTickets.tickets">
       <td>
         <div class="incident-btn-align">
           <a ui-sref="ticket" ng-click="closedTickets.passTicketInfo(ticket.id, ticket.subject)" class="ticket-title">
             {{ ticket.subject }}
           </a>
-          <button ng-show="ticket.hasIncident == true" button type="button" class="btn btn-warning incident-btn" ng-controller="IncidentsModalCtrl as incidentsModal" ng-click="incidentsModal.openModal(ticket.id, closedTickets.ZenFactory.closedTickets);">This ticket has incidents</button>
+          <button ng-show="ticket.hasIncident == true" button type="button" class="btn btn-warning incident-btn" ng-controller="IncidentsModalCtrl as incidentsModal" ng-click="incidentsModal.openModal(ticket, closedTickets.ZenFactory.closedTickets);">This ticket has incidents</button>
         </div>
       </td>
       <td>
