--- a/app/templates/incidentsModal.html
+++ b/app/templates/incidentsModal.html
@@ -24,20 +24,20 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="incident in incidentsModal.incidentsArray">
+    <tr ng-repeat="linkedTicket in incidentsModal.linkedTicketArray">
       <td>
-        <a ui-sref="ticket" ng-click="incidentsModal.passTicketInfo(incident.id, incident.subject)" class="ticket-title" >
-            {{ incident.subject }}
+        <a ui-sref="ticket" ng-click="incidentsModal.passTicketInfo(linkedTicket.id, linkedTicket.subject)" class="ticket-title" >
+            {{ linkedTicket.subject }}
           </a>
       </td>
       <td>
-        {{ incident.username }}
+        {{ linkedTicket.username }}
       </td>
       <td>
-        {{ incident.created_at | date:'mediumDate' }}
+        {{ linkedTicket.created_at | date:'mediumDate' }}
       </td>
       <td>
-        {{ incident.updated_at | date:'mediumDate' }}
+        {{ linkedTicket.updated_at | date:'mediumDate' }}
       </td>
     </tr>
   </tbody>
