--- a/app/templates/myTicket.html
+++ b/app/templates/myTicket.html
@@ -22,13 +22,13 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="ticket in myTickets.ZenFactory.myTicketData.ticket">
+    <tr ng-repeat="ticket in myTickets.ZenFactory.unsolvedTickets.my_tickets">
       <td>
         <a ui-sref="ticket" ng-click="myTickets.passTicketInfo(ticket.id, ticket.subject)" class="ticket-title">
             {{ ticket.subject }}
           </a>
-          <button ng-show="ticket.type == 'incident'" button type="button" class="btn btn-warning incident-btn" ng-controller="MyTicketsModalCtrl as myTicketsModal" ng-click="myTicketsModal.openModal(ticket);">This ticket has a root problem</button>
-          <button ng-show="ticket.has_incidents == true" button type="button" class="btn btn-warning incident-btn" ng-controller="MyTicketsModalCtrl as myTicketsModal" ng-click="myTicketsModal.openModal(ticket);">This ticket has incidents</button>
+          <button ng-show="ticket.type == 'incident'" button type="button" class="btn btn-warning incident-btn" ng-controller="IncidentsModalCtrl as incidentsModal" ng-click="incidentsModal.openModal(ticket, myTickets.ZenFactory.unsolvedTickets);">This ticket has a root problem</button>
+          <button ng-show="ticket.has_incidents == true" button type="button" class="btn btn-warning incident-btn" ng-controller="IncidentsModalCtrl as incidentsModal" ng-click="incidentsModal.openModal(ticket, myTickets.ZenFactory.unsolvedTickets);">This ticket has incidents</button>
       </td>
       <td>
         {{ ticket.created_at | date:'mediumDate' }}
